# TRANSLATRIX

./: .env.example  .gitignore  FIX_AND_TEST_REPORT.md  MFA_FIX_NOTES.md  README.md  docker-compose.yml
backend/: .dockerignore  API_DOCUMENTATION.md  COMPLETED_IMPLEMENTATION.md  COMPLETE_BACKEND_SUMMARY.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PHASE2_CHECKLIST.md  PHASE2_SETUP.md  PHASE2_SUMMARY.md  PHASE7_TRANSLATION_ANALYSIS.md  PHASES_6-10_SUMMARY.md  PHASE_6-10_FILES.txt  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  README.md  README_COMPREHENSIVE.md  alembic.ini  check_tables.py  create_extraction_table.py  create_missing_tables.py  create_test_extraction.py  create_test_extraction_sql.py  debug_storage.py  docker-compose.yml  docker-entrypoint.sh  file_id.txt  login_and_upload.py  ocr_id.txt  pyproject.toml  requirements-ml.txt  requirements-runtime.txt  requirements.txt  reset_admin_password.py  start.sh  test_config.py  test_connection.py  test_extraction.py  test_ocr.py  (+8 more)
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/core/: health.py  idempotency.py  jwt.py  logging.py  middleware.py  pagination.py  permissions.py  rate_limiter.py  response.py  security.py  tenant_context.py
backend/app/scripts/: seed_roles.py
backend/app/services/: mistral_ocr_service.py  surya_ocr_service.py
backend/app/workers/: __init__.py  accounting_connector_worker.py  (+12 more)
backend/migrations/: env.py
backend/scripts/: integration_smoke_test.py  issue_regression_test.py  pdf_issue_regression_test.py  seed_data.py  seed_development.py
backend/tests/: test_extraction_fallback.py
(+522 files in other folders)
