[tool.poetry]
name = "translatrix-pro-backend"
version = "1.0.0"
description = "TRANSLATRIX PRO - Enterprise AI-Finance Automation Backend"
authors = ["TRANSLATRIX PRO Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
email-validator = "^2.1.0"
minio = "^7.2.5"
celery = "^5.3.6"
redis = "^5.0.1"
boto3 = "^1.34.34"
azure-storage-blob = "^12.19.0"
openai = "^1.10.0"
paddleocr = "^2.7.3"
paddlepaddle = "^2.6.0"
python-docx = "^1.1.0"
openpyxl = "^3.1.2"
PyPDF2 = "^3.0.1"
pdf2image = "^1.17.0"
pillow = "^10.2.0"
python-magic = "^0.4.27"
deepl = "^1.17.0"
httpx = "^0.26.0"
aiofiles = "^23.2.1"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
slowapi = "^0.1.9"
cryptography = "^42.0.0"
torch = "^2.0.0"
transformers = "^4.36.0"
gliner = "^0.2.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
